--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -18,8 +18,6 @@ ARG PYTHON_PREREQ_VERSIONS
 ARG PYTHON_INSTALL_PACKAGES
 ARG GDB_BUILD_SRC
 ARG UNMIN
-ARG NB_UID=${OPE_UID}
-ENV NB_UID=${NB_UID}
 
 # Fix: https://github.com/hadolint/hadolint/wiki/DL4006
 # Fix: https://github.com/koalaman/shellcheck/wiki/SC3014
@@ -177,8 +175,7 @@ ARG CHOWN_HOME_OPTS="-R"
 ARG CHOWN_EXTRA_OPTS='-R'
 ARG CHOWN_EXTRA="/home/aarch64vm /home/RISE ${CONDA_DIR}"
 ENV OPE_UID=${OPE_UID}
-ARG NB_UID=${OPE_UID}
-ENV NB_UID=${NB_UID}
+ENV NB_UID=${OPE_UID}
 ENV OPE_GID=${OPE_GID}
 ARG NB_GID=${OPE_GID}
 ENV NB_GID=${NB_GID}
