--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -14,10 +14,9 @@ LABEL maintainer="Open Education <opeffort@gmail.com>"
 # so any arguments you want to use below must be stated below FROM
 
 ARG ADDITIONAL_DISTRO_PACKAGES
-ARG PYTHON_PREREQ_VERSIONS
-ARG PYTHON_INSTALL_PACKAGES
+# ARG PYTHON_PREREQ_VERSIONS
+# ARG PYTHON_INSTALL_PACKAGES
 ARG GDB_BUILD_SRC
-ARG UNMIN
 
 # Fix: https://github.com/hadolint/hadolint/wiki/DL4006
 # Fix: https://github.com/koalaman/shellcheck/wiki/SC3014
@@ -26,30 +25,32 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 # Add a "USER root" statement followed by RUN statements to install system packages using apt-get,
 # change file permissions, etc.
 
-# install linux packages that we require for systems classes
+# install linux packages required for subsequent build steps (GDB and RISE)
 USER root
 
-RUN dpkg --add-architecture i386 && \
-    apt-get -y update --fix-missing && \
-    apt-get -y install ${ADDITIONAL_DISTRO_PACKAGES} && \
+RUN apt-get -y update --fix-missing && \
+    apt-get -y install build-essential libncurses-dev libgmp-dev && \
     apt-get clean && rm -rf /var/lib/apt/lists/* 
 
 # Now that distro packages are installed lets install the python packages we want
 # This was inspired by
 # https://github.com/jupyter/docker-stacks/blob/b186ce5fea6aa9af23fb74167dca52908cb28d71/scipy-notebook/Dockerfile
 
-USER ${NB_UID}
+# USER ${NB_UID}
+
+# # Conda 4.13.0 has some strange dependency that pulling code from the recent head, causing the mamba clean fail
+# RUN conda install conda=4.14.0 --yes
 
 # sometimes there are problems with the existing version of installed python packages
 # these need to be installed to the prerequisite versions before we can install the rest of the
 # packages. Install Python 3 packages
-RUN mamba install --quiet --yes ${PYTHON_PREREQ_VERSIONS}  && \
-    mamba install --quiet --yes ${PYTHON_INSTALL_PACKAGES} && \
-    fix-permissions "${CONDA_DIR}" && \
-    fix-permissions "/home/${NB_USER}" && \
-    mamba clean -afy
+# RUN mamba install --quiet --yes ${PYTHON_PREREQ_VERSIONS}  && \
+#     mamba install --quiet --yes ${PYTHON_INSTALL_PACKAGES} && \
+#     fix-permissions "${CONDA_DIR}" && \
+#     fix-permissions "/home/${NB_USER}" && \
+#     mamba clean -afy
 
-USER root
+# USER root
 
 # get and build gdb form source so that we have a current version >10 that support more advanced tui functionality
 RUN if [[ -n "${GDB_BUILD_SRC}" ]] ; then \
@@ -67,21 +68,25 @@ RUN if [[ -n "${GDB_BUILD_SRC}" ]] ; then \
 RUN  wget -O - https://dl.yarnpkg.com/debian/pubkey.gpg 2> /dev/null | sudo apt-key add - && \
      echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list && \
      sudo apt-get update -y && \
-     sudo apt-get install yarn -y && \
+     sudo apt-get -y install yarn && \
      mkdir /home/RISE && \
      chown jovyan /home/RISE && \
      fix-permissions /home/RISE && \
-     apt-get clean && rm -rf /var/lib/apt/lists/*
+     apt-get clean && rm -rf /var/lib/apt/lists/* && \
+     rm -rf /usr/var/cache 
 
 USER $NB_USER
 
 # swtiched back to Yiqin's branch to pickup fixes for toggling controls and notes
-RUN git clone https://github.com/OPEFFORT/RISE.git /home/RISE  && \
+RUN git clone https://github.com/DanNiESh/RISE.git /home/RISE  && \
  cd /home/RISE && \
  git checkout dev && \
  yarn install && \
  yarn run build && \
- pip install -e .
+ pip install -e . && \
+ rm -rf .git 
+
+
 
 ## Dockerfile for constructing the base Open Education Effort (OPE)
 ## container.  This container contains everything required for authoring OPE courses
@@ -92,9 +97,9 @@ ARG FROM_IMAGE
 ARG FROM_TAG
 
 FROM ${FROM_REG}${FROM_IMAGE}${FROM_TAG} AS stage-two
-#COPY --from=stage-one /opt/conda/lib/python3.10/site-packages/ /opt/conda/lib/python3.10/site-packages/ 
-#COPY --from=stage-one /opt/conda/lib/ /opt/conda/lib/
-COPY --from=stage-one /opt/conda /opt/conda
+
+# COPY --from=stage-one /opt/conda /opt/conda
+# GDB
 COPY --from=stage-one /usr/local/bin /usr/local/bin
 COPY --from=stage-one /home/RISE /home/RISE
 
@@ -105,12 +110,24 @@ ARG JUPYTER_DISABLE_EXTENSIONS
 ARG UNMIN
 ARG ADDITIONAL_DISTRO_PACKAGES
 
+ARG PYTHON_PREREQ_VERSIONS
+ARG PYTHON_INSTALL_PACKAGES
+
+
 # Fix: https://github.com/hadolint/hadolint/wiki/DL4006
 # Fix: https://github.com/koalaman/shellcheck/wiki/SC3014
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 USER ${NB_UID}
 
+RUN mamba install --quiet --yes ${PYTHON_PREREQ_VERSIONS}  && \
+    mamba install --quiet --yes ${PYTHON_INSTALL_PACKAGES} && \
+    fix-permissions "${CONDA_DIR}" && \
+    fix-permissions "/home/${NB_USER}" && \
+    mamba clean -afy && \
+    rm -rf /opt/conda/docs 
+
+# Enable extensions
 RUN for ext in ${JUPYTER_ENABLE_EXTENSIONS} ; do \
    jupyter nbextension enable "$ext" ; \
    done
@@ -131,22 +148,21 @@ RUN MPLBACKEND=Agg python -c "import matplotlib.pyplot" && \
 COPY settings ${CONDA_DIR}/share/jupyter/lab/settings
 
 RUN cd /home/RISE && jupyter server extension enable rise && \
- jupyter serverextension enable rise && \
- jupyter labextension develop --overwrite . && \
- jupyter-nbextension install rise --py --sys-prefix --symlink && \
- jupyter-nbextension enable rise --py --sys-prefix && \
- rm -rf /tmp/yarn* /tmp/nodejs* /tmp/npm* /tmp/v8*
+   jupyter serverextension enable rise && \
+   jupyter labextension develop --overwrite . && \
+   jupyter-nbextension install rise --py --sys-prefix --symlink && \
+   jupyter-nbextension enable rise --py --sys-prefix && \
+   rm -rf /tmp/yarn* /tmp/nodejs* /tmp/npm* /tmp/v8*
 
 USER root
 
 RUN dpkg --add-architecture i386 && \
     apt-get -y update --fix-missing && \
-    apt-get -y install ${ADDITIONAL_DISTRO_PACKAGES} && \
-    apt-get clean && rm -rf /var/lib/apt/lists/*
+    apt-get -y --no-install-recommends install ${ADDITIONAL_DISTRO_PACKAGES} && \
+    apt-get clean && rm -rf /var/lib/apt/lists/* 
 
 # we want the container to feel more like a fully fledged system so we are pulling the trigger and unminimizing it
 RUN [[ $UNMIN == "yes" ]] &&  yes | unminimize || true
-
 
 # Add ARM development environtment
 COPY aarch64vm /home/aarch64vm
@@ -158,16 +174,17 @@ RUN touch /home/${NB_USER}/.hushlogin && \
 # work around bug when term is xterm and emacs runs in xterm.js -- causes escape characters in file
     echo "export TERM=linux" >> /home/${NB_USER}/.bashrc && \
 # finally remove default working directory from joyvan home
-    rmdir /home/${NB_USER}/work
+    rmdir /home/${NB_USER}/work && \
+    # as per the nbstripout readme we setup nbstripout be always be used for the joyvan user for all repos
+    nbstripout --install --system && \
+    # use built in startup script to setup new user home
+    /usr/local/bin/start.sh true; \
+    echo "hardcoding $NB_USER to uid=$NB_UID and group name $NB_GROUP with gid=$NB_GID shell to /bin/bash" ; \
+    usermod -s /bin/bash $NB_USER ; \
+    [[ -w /etc/passwd ]] && echo "Removing write access to /etc/passwd" && chmod go-w /etc/passwd
 
-# one more fix permissions for good measure ;-)
-RUN  fix-permissions "${CONDA_DIR}" && \
-     fix-permissions "/home/${NB_USER}" && \
-     fix-permissions "/home/RISE" && \
-     fix-permissions /home/aarch64vm
 
-# as per the nbstripout readme we setup nbstripout be always be used for the joyvan user for all repos
-RUN nbstripout --install --system 
+
 
 # Static Customize for OPE USER ID choices
 # To avoid problems with start.sh logic we do not modify user name
@@ -188,12 +205,6 @@ ENV NB_GID=${NB_GID}
 ENV OPE_GROUP=${OPE_GROUP}
 ARG NB_GROUP=${OPE_GROUP}
 ENV NB_GROUP=${NB_GROUP}
-
-# # use built in startup script to setup new user home
-RUN /usr/local/bin/start.sh true; \
-    echo "hardcoding $NB_USER to uid=$NB_UID and group name $NB_GROUP with gid=$NB_GID shell to /bin/bash" ; \
-    usermod -s /bin/bash $NB_USER ; \
-    [[ -w /etc/passwd ]] && echo "Removing write access to /etc/passwd" && chmod go-w /etc/passwd
 
 # Done customization
 
