--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -14,8 +14,8 @@ LABEL maintainer="Open Education <opeffort@gmail.com>"
 # so any arguments you want to use below must be stated below FROM
 
 ARG ADDITIONAL_DISTRO_PACKAGES
-# ARG PYTHON_PREREQ_VERSIONS
-# ARG PYTHON_INSTALL_PACKAGES
+ARG PYTHON_PREREQ_VERSIONS
+ARG PYTHON_INSTALL_PACKAGES
 ARG GDB_BUILD_SRC
 
 # Fix: https://github.com/hadolint/hadolint/wiki/DL4006
@@ -25,34 +25,39 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 # Add a "USER root" statement followed by RUN statements to install system packages using apt-get,
 # change file permissions, etc.
 
-# install linux packages required for subsequent build steps (GDB and RISE)
+# install linux packages that we require for systems classes
 USER root
 
-RUN apt-get -y update --fix-missing && \
-    apt-get -y install build-essential libncurses-dev libgmp-dev && \
-    apt-get clean && rm -rf /var/lib/apt/lists/* 
+RUN dpkg --add-architecture i386 && \
+    apt-get -y update --fix-missing && \
+    apt-get -y install build-essential libncurses-dev libgmp-dev libexpat1-dev lib32gcc-9-dev libedit-dev:i386 libmagic1 && \
+    apt-get autoremove && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
+# COPY aarch64vm /home/aarch64vm
+    
 # Now that distro packages are installed lets install the python packages we want
 # This was inspired by
 # https://github.com/jupyter/docker-stacks/blob/b186ce5fea6aa9af23fb74167dca52908cb28d71/scipy-notebook/Dockerfile
 
-# USER ${NB_UID}
-
-# # Conda 4.13.0 has some strange dependency that pulling code from the recent head, causing the mamba clean fail
-# RUN conda install conda=4.14.0 --yes
+USER ${NB_UID}
 
 # sometimes there are problems with the existing version of installed python packages
 # these need to be installed to the prerequisite versions before we can install the rest of the
 # packages. Install Python 3 packages
-# RUN mamba install --quiet --yes ${PYTHON_PREREQ_VERSIONS}  && \
-#     mamba install --quiet --yes ${PYTHON_INSTALL_PACKAGES} && \
-#     fix-permissions "${CONDA_DIR}" && \
-#     fix-permissions "/home/${NB_USER}" && \
-#     mamba clean -afy
 
-# USER root
+RUN mamba install --quiet --yes ${PYTHON_PREREQ_VERSIONS}  && \
+    mamba install --quiet --yes ${PYTHON_INSTALL_PACKAGES} && \
+    pip install nbclient==0.5.13 && \
+    pip install jupyterlab_rise && \
+    fix-permissions "${CONDA_DIR}" && \
+    fix-permissions "/home/${NB_USER}" && \
+    mamba clean -afy
+    
+USER root
 
-# get and build gdb form source so that we have a current version >10 that support more advanced tui functionality
+
+# get and build gdb from source so that we have a current version >10 that support more advanced tui functionality
 RUN if [[ -n "${GDB_BUILD_SRC}" ]] ; then \
       cd /tmp && \
       wget http://ftp.gnu.org/gnu/gdb/${GDB_BUILD_SRC}.tar.gz && \
@@ -63,29 +68,6 @@ RUN if [[ -n "${GDB_BUILD_SRC}" ]] ; then \
       cd /tmp && \
       rm -rf ${GDB_BUILD_SRC} && rm ${GDB_BUILD_SRC}.tar.gz ; \
     fi
-
-# adding our custom OPE version of RISE for lab -- remove once main RISE is fixed
-RUN  wget -O - https://dl.yarnpkg.com/debian/pubkey.gpg 2> /dev/null | sudo apt-key add - && \
-     echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list && \
-     sudo apt-get update -y && \
-     sudo apt-get -y install yarn && \
-     mkdir /home/RISE && \
-     chown jovyan /home/RISE && \
-     fix-permissions /home/RISE && \
-     apt-get clean && rm -rf /var/lib/apt/lists/* && \
-     rm -rf /usr/var/cache 
-
-USER $NB_USER
-
-# swtiched back to Yiqin's branch to pickup fixes for toggling controls and notes
-RUN git clone https://github.com/DanNiESh/RISE.git /home/RISE  && \
- cd /home/RISE && \
- git checkout dev && \
- yarn install && \
- yarn run build && \
- pip install -e . && \
- rm -rf .git 
-
 
 
 ## Dockerfile for constructing the base Open Education Effort (OPE)
@@ -98,42 +80,40 @@ ARG FROM_TAG
 
 FROM ${FROM_REG}${FROM_IMAGE}${FROM_TAG} AS stage-two
 
-# COPY --from=stage-one /opt/conda /opt/conda
-# GDB
-COPY --from=stage-one /usr/local/bin /usr/local/bin
-COPY --from=stage-one /home/RISE /home/RISE
+ARG OPE_UID
+ARG OPE_GID
 
-LABEL maintainer="Open Education <opeffort@gmail.com>"
+COPY --from=stage-one /opt /opt
+COPY --from=stage-one /usr/local/bin/gdb /usr/local/bin/gdb
+COPY --from=stage-one --chown=jovyan:${OPE_GID} /home /home
+
+# LABEL maintainer="Open Education <opeffort@gmail.com>"
 
 ARG JUPYTER_ENABLE_EXTENSIONS
 ARG JUPYTER_DISABLE_EXTENSIONS
 ARG UNMIN
 ARG ADDITIONAL_DISTRO_PACKAGES
 
-ARG PYTHON_PREREQ_VERSIONS
-ARG PYTHON_INSTALL_PACKAGES
-
-
 # Fix: https://github.com/hadolint/hadolint/wiki/DL4006
 # Fix: https://github.com/koalaman/shellcheck/wiki/SC3014
-SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+# SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
+USER root
+
+RUN dpkg --add-architecture i386 && \
+    apt-get -y update --fix-missing && \
+    apt-get -y install ${ADDITIONAL_DISTRO_PACKAGES} && \
+    apt-get autoremove && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 USER ${NB_UID}
 
-RUN mamba install --quiet --yes ${PYTHON_PREREQ_VERSIONS}  && \
-    mamba install --quiet --yes ${PYTHON_INSTALL_PACKAGES} && \
-    fix-permissions "${CONDA_DIR}" && \
-    fix-permissions "/home/${NB_USER}" && \
-    mamba clean -afy && \
-    rm -rf /opt/conda/docs 
-
-# Enable extensions
 RUN for ext in ${JUPYTER_ENABLE_EXTENSIONS} ; do \
    jupyter nbextension enable "$ext" ; \
    done
 
 # disable extensions -- disabling core extensions can be really useful for customizing
-#                       jupyterlab user experience
+# jupyterlab user experience
 RUN for ext in ${JUPYTER_DISABLE_EXTENSIONS} ; do \
    jupyter labextension disable "$ext" ; \
    done
@@ -141,31 +121,25 @@ RUN for ext in ${JUPYTER_DISABLE_EXTENSIONS} ; do \
 # Import matplotlib the first time to build the font cache.
 ENV XDG_CACHE_HOME="/home/${NB_USER}/.cache/"
 
-RUN MPLBACKEND=Agg python -c "import matplotlib.pyplot" && \
-    fix-permissions "/home/${NB_USER}"
+# RUN MPLBACKEND=Agg python -c "import matplotlib.pyplot" && \
+#     fix-permissions "/home/${NB_USER}"
 
 # copy overrides.json
 COPY settings ${CONDA_DIR}/share/jupyter/lab/settings
 
-RUN cd /home/RISE && jupyter server extension enable rise && \
-   jupyter serverextension enable rise && \
-   jupyter labextension develop --overwrite . && \
-   jupyter-nbextension install rise --py --sys-prefix --symlink && \
-   jupyter-nbextension enable rise --py --sys-prefix && \
-   rm -rf /tmp/yarn* /tmp/nodejs* /tmp/npm* /tmp/v8*
+# Add ARM development environtment
+# COPY --chown=jovyan:root aarch64vm /home/aarch64vm
 
 USER root
-
-RUN dpkg --add-architecture i386 && \
-    apt-get -y update --fix-missing && \
-    apt-get -y --no-install-recommends install ${ADDITIONAL_DISTRO_PACKAGES} && \
-    apt-get clean && rm -rf /var/lib/apt/lists/* 
 
 # we want the container to feel more like a fully fledged system so we are pulling the trigger and unminimizing it
 RUN [[ $UNMIN == "yes" ]] &&  yes | unminimize || true
 
-# Add ARM development environtment
-COPY aarch64vm /home/aarch64vm
+RUN  fix-permissions "${CONDA_DIR}" && \
+     fix-permissions "/home/${NB_USER}"&& \
+     fix-permissions ${CONDA_DIR}/share/jupyter/lab/settings
+
+RUN nbstripout --install --system 
 
 # final bits of cleanup
 RUN touch /home/${NB_USER}/.hushlogin && \
@@ -174,15 +148,7 @@ RUN touch /home/${NB_USER}/.hushlogin && \
 # work around bug when term is xterm and emacs runs in xterm.js -- causes escape characters in file
     echo "export TERM=linux" >> /home/${NB_USER}/.bashrc && \
 # finally remove default working directory from joyvan home
-    rmdir /home/${NB_USER}/work && \
-    # as per the nbstripout readme we setup nbstripout be always be used for the joyvan user for all repos
-    nbstripout --install --system && \
-    # use built in startup script to setup new user home
-    /usr/local/bin/start.sh true; \
-    echo "hardcoding $NB_USER to uid=$NB_UID and group name $NB_GROUP with gid=$NB_GID shell to /bin/bash" ; \
-    usermod -s /bin/bash $NB_USER ; \
-    [[ -w /etc/passwd ]] && echo "Removing write access to /etc/passwd" && chmod go-w /etc/passwd
-
+    rmdir /home/${NB_USER}/work 
 
 
 
@@ -196,7 +162,6 @@ ARG OPE_GROUP
 ARG CHOWN_HOME=yes
 ARG CHOWN_HOME_OPTS="-R"
 ARG CHOWN_EXTRA_OPTS='-R'
-ARG CHOWN_EXTRA="/home/aarch64vm /home/RISE ${CONDA_DIR}"
 ENV OPE_UID=${OPE_UID}
 ENV NB_UID=${OPE_UID}
 ENV OPE_GID=${OPE_GID}
@@ -207,6 +172,10 @@ ARG NB_GROUP=${OPE_GROUP}
 ENV NB_GROUP=${NB_GROUP}
 
 # Done customization
+RUN /usr/local/bin/start.sh true; \
+    echo "hardcoding $NB_USER to uid=$NB_UID and group name $NB_GROUP with gid=$NB_GID shell to /bin/bash" ; \
+    usermod -s /bin/bash $NB_USER ; \
+    [[ -w /etc/passwd ]] && echo "Removing write access to /etc/passwd" && chmod go-w /etc/passwd
 
 # jupyter-stack contains logic to run custom start hook scripts from
 # two locations -- /usr/local/bin/start-notebook.d and
@@ -216,4 +185,7 @@ ENV NB_GROUP=${NB_GROUP}
 COPY start-notebook.d /usr/local/bin/start-notebook.d
 
 ENV USER=$NB_USER
+
+
 USER $NB_USER
+CMD  ["/bin/bash", "-c", "cd /home/jovyan ; start-notebook.sh"]
